# hazTrak

./: compose.yaml
.github/workflows/: build_image.yaml  dependency_review.yaml  lint_client.yaml  terraform_lint.yaml  test_client.yaml  test_server.yaml
client/: .dockerignore  .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tsconfig.json
client/src/: App.tsx  index.tsx  routes.tsx
client/src/app/: layout.tsx
client/src/app/[[...slug]]/: page.tsx
client/src/components/Auth/: LoginForm.tsx
client/src/components/Error/: Error404.tsx
client/src/components/HaztrakSite/: haztrakSiteSchema.ts
client/src/components/Help/: HaztrakLicense.tsx  index.ts
client/src/components/Layout/: PrivateRoute.tsx  Root.tsx
client/src/components/Manifest/: ManifestForm.spec.tsx  ManifestForm.tsx  manifestSchema.ts
client/src/components/Mtn/: MtnTable.spec.tsx  MtnTable.tsx
client/src/components/Notifications/: Notifications.tsx  ProgressTracker.tsx
client/src/components/Org/: OrgSitesTable.tsx  UserOrg.tsx
client/src/components/RcraProfile/: RcraProfile.tsx  SyncRcrainfoProfileBtn.tsx  index.ts
client/src/components/RcraSite/: AddressListGroup.tsx  RcraSiteDetails.spec.tsx  RcraSiteDetails.tsx
client/src/components/UI/: index.ts
client/src/components/User/: SiteAccess.tsx  UserInfoForm.spec.tsx  UserInfoForm.tsx  index.ts
client/src/features/About/: About.tsx
client/src/features/Dashboard/: Dashboard.spec.tsx  Dashboard.tsx  index.ts
client/src/features/ErrorPage/: ErrorPage.tsx  index.ts
client/src/features/Login/: Login.tsx  login.spec.tsx
client/src/features/ManifestDetails/: ManifestDetails.tsx
client/src/features/ManifestList/: ManifestList.tsx
client/src/features/NewManifest/: NewManifest.spec.tsx  NewManifest.tsx
client/src/features/Profile/: Profile.tsx
client/src/features/RegisterHero/: RegisterHero.tsx  index.ts
client/src/features/SiteDetails/: SiteDetails.tsx  index.ts
client/src/features/SiteList/: SiteList.spec.tsx  SiteList.tsx  index.ts
client/src/hooks/usePagination/: usePagination.spec.tsx
client/src/hooks/useProgressTracker/: useProgressTracker.spec.tsx  useProgressTracker.tsx
client/src/hooks/useTitle/: useTitle.spec.tsx
client/src/hooks/useUserSiteIds/: useUserSiteIds.spec.tsx  useUserSiteIds.tsx
client/src/services/: index.ts
client/src/services/APIs/: htApi.ts
client/src/services/manifest/: manifest.spec.ts  manifest.ts
client/src/store/: htApi.slice.ts  index.ts  rootStore.ts
client/src/store/authSlice/: auth.slice.spec.tsx
client/src/store/manifestSlice/: manifest.slice.spec.tsx  manifest.slice.ts
client/src/store/notificationSlice/: notification.slice.spec.tsx  notification.slice.ts
client/src/store/userSlice/: user.slice.spec.tsx  user.slice.ts
client/src/test-utils/: index.ts  render.tsx
client/src/test-utils/fixtures/: mockHandler.ts  mockManifest.ts  mockUser.ts  mockWaste.ts
client/src/test-utils/mock/: index.ts  mockManifestEndpoints.ts  (+3 more)
configs/: .env.dev  .env.test
server/: pyproject.toml
(+92 files in other folders)
