[project]
name = "haztrak"
version = "0.8.0"
description = "An open-source web app illustrating how waste management software can interface with RCRAInfo to track hazardous waste"
readme = "README.md"
authors = [
    { name = "David Graham", email = "graham.david@epa.gov" },
]
maintainers = [
    { name = "David Graham", email = "graham.david@epa.gov" },
]

dependencies = [
    "django==5.0.8",
    "django-celery-results==2.5.1",
    "django-cors-headers==4.4.0",
    "django-extensions==3.2.3",
    "django-celery-beat==2.6.0",
    "djangorestframework==3.15.2",
    "gunicorn==22.0.0",
    "emanifest==4.0.3",
    "psycopg[binary]==3.2.1",
    "pytz==2024.1",
    "sqlparse==0.5.1",
    "tzdata==2024.1",
    "whitenoise==6.6.0",
    "celery==5.4.0",
    "redis==5.0.8",
    "drf-spectacular==0.27.2",
    "django-health-check==3.18.3",
    "dj-rest-auth[with_social]==6.0.0",
    "django-guardian==2.4.0",
    "django-allauth==0.61.1",
    "djangorestframework-simplejwt==5.3.1",
    "pillow==10.4.0",
]
license = { text = "MIT" }
requires-python = ">=3.12"

[project.urls]
issues = "https://github.com/USEPA/haztrak/issues"
documentation = "https://usepa.github.io/haztrak/"
homepage = "https://github.com/USEPA/haztrak"
repository = "https://github.com/USEPA/haztrak"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["F", "E", "W", "Q", "I001"]
ignore = ["F401"]
exclude = ["**/migrations/*.py"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "haztrak.settings.test"


[tool.mypy]
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main"
]
exclude = [
    "**/migrations/*.py"
]
enable_error_code = [
    "truthy-bool",
    "truthy-iterable",
    "redundant-expr",
    "unused-awaitable",
    "ignore-without-code",
    "possibly-undefined",
    "redundant-self",
]
allow_redefinition = false
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
explicit_package_bases = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
strict_equality = true
strict_optional = true
show_error_codes = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true

[tool.django-stubs]
django_settings_module = ".haztrak.settings.test"
strict_settings = false

[tool.uv]
dev-dependencies = [
    "pytest-mock==3.14.0",
    "pre-commit==3.8.0",
    "pytest==8.2.2",
    "pytest-django==4.8.0",
    "responses==0.25.3",
    "ruff==0.5.6",
    "celery-types==0.22.0",
    "djangorestframework-stubs==3.15.0",
    "ruff-lsp==0.0.54",
    "django-stubs==5.0.4",
    "django-stubs-ext==5.0.4",
    "Faker==26.1.0",
    "coverage==7.5.4",
    "pytest-xdist==3.6.1",
    "mypy==1.11.1",
    "mypy-extensions==1.0.0",
    "pytest-cov>=5.0.0",
]
